重构项目: 创建pyctp_api统一CTP接口
- 删除原vnpy_ctp相关代码，创建独立的pyctp_api项目
- 新增ctp_gateway.py: 统一的CTP网关，整合MD和TD API
- 新增test_ctp.py: 完整的功能测试程序，100%测试通过率
- 重构项目结构，使用Python 3.11虚拟环境
- 更新配置文件和依赖管理
- 删除无用的script目录和临时文件
- 实现实时行情订阅、账户查询、持仓查询、订单交易等功能
- 支持SimNow模拟账户连接测试

--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,31 @@
 *.pyc
 dist/
 build/
+builddir/
 vnpy_ctp.egg-info/
 __pycache__/
+*.con
 
-# Visual Studio
+# Virtual Environment
+.venv/
+venv/
+env/
+
+# IDEs and Editors
 .vs/
-x64/
+.cursor/
+.vscode/
+.idea/
+*.swp
+*.swo
 
+# OS
 .DS_Store
+Thumbs.db
+
+# Test and Cache
+.pytest_cache/
+.cache/
+
+# Temporary files
+x64/
