--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "vnpy_ctp"
-version = "6.7.7.2"
-description = "CTP gateway for vn.py quant trading framework."
+name = "pyctp-api"
+version = "1.0.0"
+description = "Pure Python CTP API - A lightweight wrapper for CTP (Comprehensive Transaction Platform)"
 readme = "README.md"
 license = {text = "MIT"}
-authors = [{name = "Xiaoyou Chen", email = "xiaoyou.chen@mail.vnpy.com"}]
+authors = [{name = "CTP API Team", email = "ctp@example.com"}]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Operating System :: Microsoft :: Windows",
@@ -19,17 +19,16 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "License :: OSI Approved :: MIT License",
     "Natural Language :: Chinese (Simplified)",
+    "Natural Language :: English",
 ]
 requires-python = ">=3.10"
-dependencies = ["vnpy>=3.0.0"]
-keywords = ["quant", "quantitative", "investment", "trading", "algotrading", "ctp"]
+dependencies = []
+keywords = ["ctp", "trading", "futures", "api", "financial", "market-data"]
 
 [project.urls]
-"Homepage" = "https://www.vnpy.com"
-"Documentation" = "https://www.vnpy.com/docs"
-"Changes" = "https://github.com/vnpy/vnpy_ctp/blob/master/CHANGELOG.md"
-"Source" = "https://github.com/vnpy/vnpy_ctp/"
-"Forum" = "https://www.vnpy.com/forum"
+"Homepage" = "https://github.com/your-org/pyctp-api"
+"Documentation" = "https://github.com/your-org/pyctp-api/blob/main/README.md"
+"Source" = "https://github.com/your-org/pyctp-api"
 
 [build-system]
 requires = [
